[gd_scene load_steps=2 format=3 uid="uid://negotiation_dialog"]

[ext_resource type="Script" path="res://scripts/ui/negotiation_dialog_ui.gd" id="1_neg_ui"]

[node name="NegotiationDialog" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -180.0
offset_right = 250.0
offset_bottom = 180.0
script = ExtResource("1_neg_ui")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="DemonNameLabel" type="Label" parent="VBoxContainer"]
text = "Demon Name"
horizontal_alignment = 1

[node name="DemonPortrait" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(80, 80)
color = Color(0.8, 0.2, 0.2, 1)

[node name="DialogText" type="Label" parent="VBoxContainer"]
text = "A demon stands before you, weakened but defiant."
autowrap_mode = 3

[node name="ChanceLabel" type="Label" parent="VBoxContainer"]
text = "Recruit Chance: 0%"
horizontal_alignment = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="VBoxContainer"]
alignment = 1

[node name="AppealButton" type="Button" parent="ButtonsContainer"]
text = "Appeal"

[node name="ThreatenButton" type="Button" parent="ButtonsContainer"]
text = "Threaten"

[node name="OfferItemButton" type="Button" parent="ButtonsContainer"]
text = "Offer Item"

[node name="ResultLabel" type="Label" parent="VBoxContainer"]
text = ""
horizontal_alignment = 1
modulate = Color(1, 1, 0, 1)
